--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Revista_%C2%A1Hola%21_logo.svg/1200px-Revista_%C2%A1Hola%21_logo.svg.png" alt="Imagen 1">
         <br>
         <iframe width="360" height="215" src="https://www.youtube.com/embed/F9wKitA44ls?si=tXWpEprYXwUwyWJp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/673exMTKtkaNosGrNAikth?utm_source=generator" width="auto" height="150" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5zDEMy7lLJ1W7vauTrH5mb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
     </section>
 
