--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
             <h2>Otro título.</h2>
             <p>Otro párrafo</p>
         </article>
+
+        <article class="article">
+            <h2>Otro título.</h2>
+            <p>Otro párrafo</p>
+        </article>
+
+        <article class="article">
+            <h2>Otro título.</h2>
+            <p>Otro párrafo</p>
+        </article>
     </section>
+
+    <aside>
+        <h2>Barra Lateral</h2>
+    </aside>
+
+    <footer>
+        Pie de pagina.
+    </footer>
 </body>
 
 </html>
