--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Descripcion</title>
-
+    <link rel="stylesheet" href="estilos.css">
 </head>
     
 <body>
